# OOP-labs

1lab/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gcd.cpp  main.cpp  readme.md  test_gcd.cpp
2lab/: CMakeLists.txt  main.cpp
2lab/include/: lab2.h
2lab/src/: lab2.cpp
3lab/: CMakeLists.txt  main.cpp
4lab/: CMakeLists.txt  main.cpp
5lab/: CMakeLists.txt  laba5.cpp  unit.cpp
6lab/: CMakeLists.txt  unit.cpp
6lab/src/: NPCFactory.cpp  npc.cpp  observer.cpp
7lab/: CMakeLists.txt  main.cpp  unit.cpp
7lab/src/: NPCFactory.cpp  npc.hpp  observer.hpp  visitor.hpp
